--- a/Unidad2/.classpath
+++ b/Unidad2/.classpath
@@ -4,5 +4,10 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="C:/db/conectores/sqlite-jdbc-3.7.2.jar"/>
 	<classpathentry kind="lib" path="C:/db/conectores/derby.jar"/>
+	<classpathentry kind="lib" path="C:/db/conectores/classes12.jar"/>
+	<classpathentry kind="lib" path="C:/db/conectores/db4o-8.0.224.15975-core-java5.jar"/>
+	<classpathentry kind="lib" path="C:/db/conectores/h2-1.3.162.jar"/>
+	<classpathentry kind="lib" path="C:/db/conectores/hsqldb.jar"/>
+	<classpathentry kind="lib" path="C:/db/conectores/mysql-connector-java-5.1.18-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
